--- a/KGERP/Views/BillRequisition/BillRequisitionItem.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionItem.cshtml
@@ -110,7 +110,8 @@
                                                     </td>
                                                     <td id="tdRequisitionItemName_@item.BillRequisitionItemId">@item.Name</td>
                                                     <td id="tdRequisitionItemDescription_@item.BillRequisitionItemId">@item.Description</td>
-                                                    <td id="tdRequisitionItemUnit_@item.BillRequisitionItemId">@Model.Units.FirstOrDefault(c => c.ID == item.UnitId).Name</td>
+                                                    <td id="tdRequisitionItemUnit_@item.UnitId">@Model.Units.FirstOrDefault(c => c.ID == item.UnitId).Name</td>
+
                                                     <td>
                                                         <a id="@item.BillRequisitionItemId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
@@ -175,18 +176,21 @@
             $('.formValidator').bootstrapValidator();
         });
 
+        
+
         function makeEditble(elem) {
-            if (elem !== null) {
+        if (elem !== null) {
                 var rowId = elem.id;
-                $('#requisitionItem_').val(rowId);
+                $('#BillRequisitionItemId').val(rowId); // Corrected line
                 $('#ActionId').val(2);
                 $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Update");
                 $('#txtRequisitionItemName').val($('#tdRequisitionItemName_' + rowId).text().trim());
                 $('#txtRequisitionItemDescription').val($('#tdRequisitionItemDescription_' + rowId).text().trim());
-                $('#selectUnit').val($('#tdRequisitionItemUnit_' + rowId).val().trim()).trigger('change');
+                $('#selectUnit').val($('#tdRequisitionItemUnit_' + rowId).text().trim()).trigger('change'); // Corrected line
                 window.scrollTo({ top: 0, behavior: 'smooth' });
             }
         }
+
 
         function makeDeletable(id) {
             if (id !== null) {
