--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -62,7 +62,7 @@
 
                                         <th>Status</th>
                                         <th>:</th>
-                                        <td>Draft</td>
+                                        <td>@Model.StatusName</td>
                                     </tr>
                                     <tr>
                                         <th>Requisition No</th>
