account cost center with account cos center cost type done

--- a/KGERP/Views/Configuration/AccountingCostCenter.cshtml
+++ b/KGERP/Views/Configuration/AccountingCostCenter.cshtml
@@ -34,22 +34,24 @@
                                     @Html.HiddenFor(model => model.ActionId, new { id = "ActionId" })
                                     @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
 
+                                    <div class="form-group">
+                                        <label asp-for="ProjectId">Select Project</label>
+                                        @Html.DropDownListFor(model => model.accounting_CostCenterTypeId, new SelectList(Model.accounting_CostCenterTypes, "CostCenterTypeId", "Name"), "-- Select Project Type --", new { id = "selectProjectType", @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.accounting_CostCenterTypeId, "", new { @class = "text-danger" })
+                                    </div>
 
-                                    
                                     <div class="form-group">
                                         @Html.TextBoxFor(model => model.Name, new { id = "txtMenuName", @class = "form-control input-sm", @placeholder = "Project/Cost Center Name" })
                                         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                                     </div>
-                                  
+
                                     <div class="form-group">
                                         <div class="col-md-4">
                                             <button type="button" onclick="resetForm()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
                                         </div>
                                         <div class="col-md-8">
                                             <button type="submit" id="btnSave" class="btn btn-primary btn-block"><i class='fa fa-edit'></i> Add</button>
-
                                         </div>
-
                                     </div>
                                 </div>
                                 <div class="box-footer">
@@ -88,9 +90,11 @@
                                                     <td id="tdCompanyFK_@item.ID">
                                                         @item.CompanyName
                                                         <input type="hidden" id="hidCompanyFK_@item.ID" value="@item.CompanyFK" />
+                                                        <input type="hidden" id="costCenterTypeId_@item.accounting_CostCenterTypeId" name="accounting_CostCenterTypeId" value="@item.accounting_CostCenterTypeId" />
                                                     </td>
+                                                    <td id="tdprojectType_@item.ID">@Model.accounting_CostCenterTypes.FirstOrDefault(c=> c.CostCenterTypeId == item.accounting_CostCenterTypeId).Name</td>
+
                                                     <td id="tdMenuName_@item.ID">@item.Name</td>
-                                                  
 
                                                     <td>
                                                         <a id="@item.ID" onclick=" makeEditble(this);" class="linkPointer" data-toggle="modal" data-target="#exampleModal" title="Edit" data-placement="top"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
@@ -154,6 +158,7 @@
                     $('#ActionId').val(2);
                     $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Update");
                     $('#txtMenuName').val($('#tdMenuName_' + rowId).text().trim());
+                    $('#selectProjectType').val($('#costCenterTypeId_' + rowId).val().trim()).trigger('change');
                     window.scrollTo({ top: 0, behavior: 'smooth' });
 
                 }
